# nextrelease

./: .gitignore  Dockerfile  README.md  action.yml  docker_requirements.txt  pyproject.toml
.github/workflows/: nextrelease.yml  test.yml
nextrelease/: __init__.py  api.py  cli.py  git.py  github.py  pullrequest.py  settings.py
scripts/: docker  pre-commit
tests/: test_pr.py
