[tool.poetry]
name = "nextrelease"
version = "0.1.0-rc.1"
description = "A GitHub Action to perform releases via a PR"
authors = ["Dave Gaeddert <dave.gaeddert@dropseed.io>"]

[tool.poetry.scripts]
nextrelease = "nextrelease.cli:cli"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.24.0"
click = "^7.1.2"
semver = "^2.13.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.3"
black = "^20.8b1"
pytest = "^6.2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
