[tool.poetry]
name = "nextrelease"
version = "2.0.0"
description = "A GitHub Action to perform releases via a PR"
authors = ["Dave Gaeddert <dave.gaeddert@dropseed.io>"]

[tool.poetry.scripts]
nextrelease = "nextrelease.cli:cli"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
click = "^7.1.2"
semver = "^2.13.0"
cls-client = "^1.4.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.3"
black = "^20.8b1"
pytest = "^7.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
